--- a/src/TidyWindow.App/Views/CleanupPage.xaml
+++ b/src/TidyWindow.App/Views/CleanupPage.xaml
@@ -2082,8 +2082,8 @@
                                                              Padding="8,8,8,4"
                                                              ScrollViewer.VerticalScrollBarVisibility="Auto"
                                                              ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-                                                                                                                         ScrollViewer.CanContentScroll="False"
-                                                                                                                         ScrollViewer.IsDeferredScrollingEnabled="False"
+                                                                                                                        ScrollViewer.CanContentScroll="True"
+                                                                                                                        ScrollViewer.IsDeferredScrollingEnabled="True"
                                                              VirtualizingPanel.IsVirtualizing="True"
                                                              VirtualizingPanel.IsVirtualizingWhenGrouping="True"
                                                              VirtualizingPanel.IsContainerVirtualizable="True"
